# swc-plugin

./: README.md
.cargo/: config.toml
accuracy/: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
accuracy/src/: async_tool.rs  calc.js  config.rs  lib.rs  opration_tool.rs  promise_tool.rs
accuracy/tests/: fixture.rs
accuracy/tests/fixture/async_test/async/: input.js  output.js
accuracy/tests/fixture/calculate/assign_div/: input.js  output.js
accuracy/tests/fixture/calculate/assign_mod/: input.js  output.js
accuracy/tests/fixture/calculate/assign_mul/: input.js  output.js
accuracy/tests/fixture/calculate/assign_sub/: input.js  output.js
accuracy/tests/fixture/calculate/assign_sum/: input.js  output.js
accuracy/tests/fixture/calculate/div/: input.js  output.js
accuracy/tests/fixture/calculate/fun_sum/: input.js  output.js
accuracy/tests/fixture/calculate/mod/: input.js  output.js
accuracy/tests/fixture/calculate/mul/: input.js  output.js
accuracy/tests/fixture/calculate/polyfill_sum/: input.js  output.js
accuracy/tests/fixture/calculate/sub/: input.js  output.js
accuracy/tests/fixture/calculate/sum/: output.js
accuracy/tests/fixture/promise_test/promise/: input.js
delete-console/: Cargo.toml  delete_console.wasm  package-lock.json  package.json  rustfmt.toml
delete-console/src/: config.rs  file.rs  lib.rs
delete-console/tests/: file-path.rs  fixture.rs
delete-console/tests/fixture/console/: input.js  output.js
src/: asnycWrap.rs  lib.rs  new_date_tool.rs  opration_tool.rs
swc-plugin-test/: Cargo.toml
swc-plugin-test/src/: lib.rs
swc-plugin-test/tests/: fixture.rs
swc-plugin-test/tests/fixture/console/: input.js
tests/: fixture.rs
tests/fixture/async_test/async_try/: output.js
tests/fixture/calculate/: output.js
tests/fixture/calculate/assign_sum/: output.js
tests/fixture/calculate/sum/: input.js  output.js
tests/fixture/new_date_test/new_date/: input.js  output.js
tests/fixture/promiseCatch/: input.js  output.js
tests/fixture/promise_test/promise/: output.js
tests/fixture/promise_test/promise_mutil_then/: input.js  output.js
