[package]
name = "accuracy"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
# This removes more dead code
codegen-units = 1
lto = true
# Optimize for size
opt-level = "s"
# Optimize for performance, this is default so you don't need to specify it
# opt-level = "z"
 
# Strip debug symbols
strip = "symbols"


[dependencies]
serde = "1"
serde_json = "1.0.79"
swc_common = { version = "0.37.5", features = ["concurrent"] }
swc_core = { version = "0.103.1", features = ["common", "ecma_ast", "ecma_plugin_transform", "ecma_parser", "ecma_utils", "ecma_visit"] }
testing = "0.39.0"
tracing = {version = "0.1.37", features = ["release_max_level_off"]}
glob = "0.3.1"
swc_ecma_ast = "0.118.2"
ast_node = "0.9.9"

# .cargo/config defines few alias to build plugin.
# cargo build-wasi generates wasm-wasi32 binary
# cargo build-wasm32 generates wasm32-unknown-unknown binary.
