[package]
name = "delete_console"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = true

[dependencies]
serde = "1"
swc_core = { version = "0.44.*", features = ["plugin_transform"] }
swc_plugin_loadable_components = "0.3.0"
testing = "0.31.31"

# .cargo/config defines few alias to build plugin.
# cargo build-wasi generates wasm-wasi32 binary
# cargo build-wasm32 generates wasm32-unknown-unknown binary.
