[package]
name = "delete_console"
version = "0.1.0"
edition = "2021"
authors = ["lpopopo <2403164743@qq.com>"]
description="swc plugin delete console"
license = "MIT OR Apache-2.0"
[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
# This removes more dead code
codegen-units = 1
lto = true
# Optimize for size
opt-level = "s"
# Optimize for performance, this is default so you don't need to specify it
# opt-level = "z"
 
# Strip debug symbols
strip = "symbols"


[dependencies]
serde = "1"
swc_core = { version = "0.59.14", features = [
     "common",
     "ecma_ast",
     "ecma_plugin_transform",
     "ecma_parser",
     "ecma_minifier",
     "ecma_utils",
     "ecma_visit",
] }
testing = "0.31.31"
wasm-bindgen = "0.2"



# .cargo/config defines few alias to build plugin.
# cargo build-wasi generates wasm-wasi32 binary
# cargo build-wasm32 generates wasm32-unknown-unknown binary.
